fix(menu) fix overlapping due to sticky z-index

--- a/apps/urlaubplaner-web/src/app/planner/planner-page.component.scss
+++ b/apps/urlaubplaner-web/src/app/planner/planner-page.component.scss
@@ -3,5 +3,5 @@
     /* Safari */
     position: sticky;
     top: 8px;
-    z-index: 999;
+    z-index: 10;
 }
